--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@
   font-family: "Pixel2Drg";
   src: url("./typos/Pixel2Drg.ttf") format("truetype");
 }
+html {
+  scroll-behavior: smooth;
+}
 * {
   margin: 0;
   padding: 0;
@@ -177,13 +180,23 @@ body {
   margin: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
-}
-.project-tile:hover {
-  animation-name: project-tile-hover-a;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+  transition: 0.5s ease-out transform;
+  transform: scale(1);
 }
 
+.project-tile:hover {
+  transform: scale(1.1);
+  transition: 0.5s ease-out all;
+}
+
+@keyframes project-tile-nothover {
+  0% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 @keyframes project-tile-hover-a {
   0% {
     transform: scale(1);
@@ -274,7 +287,7 @@ body {
   border-radius: 1rem;
   width: 400px;
   margin: 1rem;
-  padding: 3px;
+  padding: 2rem;
 }
 .link-contact:hover {
   animation-name: links-hover;
@@ -330,6 +343,7 @@ body {
 }
 .footer {
   margin: 3rem;
+  margin-bottom: 0;
   text-align: center;
   padding-bottom: 3rem;
   color: white;
@@ -418,4 +432,3 @@ body {
 .anchor-prevent {
   text-decoration: none;
 }
-
